[tool.poetry]
name = "python-data-profiler-comp"
version = "0.1.0"
description = ""
authors = ["James Bristow <james.bristow@plantandfood.co.nz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ydata-profiling = "^4.6.5"
pandas = "<=2.0.3"
numpy = "<1.26"
matplotlib = "<3.8.0"
statsmodels = "^0.14.1"
seaborn = "<0.13"
pydantic = "^2.6.3"
evidently = "^0.4.16"
httpx = "^0.27.0"
scikit-learn = "<=1.3.0"
plotly = "^5.19.0"
deepchecks = "<0.17.3"
scipy = "<1.11.4"
whylogs = {extras = ["viz"], version = "^1.3.24"}
great-expectations = "^0.18.10"
kaleido = "0.2.1"
pycaret = "<=3.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
